hard-gists/1805981/run.log
=== Docker Run Log for 1805981 ===
Started at: Mi 29. Okt 12:29:50 CET 2025

[2025-10-29 12:29:51] START: Running container for 1805981
[2025-10-29 12:29:51] SUCCESS: Container 81427154b68932f14fddcbfc8462959e0c9de1d00505d931a42e1e3131808cbd started for 1805981
=== Container logs for 1805981 ===
  File "/snippet.py", line 35
    print '[toggle_single_line_css]: ' + text
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1805981 ===
[2025-10-29 12:29:53] INFO: Container 81427154b68932f14fddcbfc8462959e0c9de1d00505d931a42e1e3131808cbd has stopped
